# WalkAwake_Backend

./: .gitignore  CMakeLists.txt  WA_binder.cpp  main.cpp  setup.py
AlarmModule/: AlarmManager.cpp  AlarmManager.hpp  AlarmTrigger.cpp  AlarmTrigger.hpp  SoundController.cpp  SoundController.hpp
CameraModule/: ApiCaller.cpp  ApiCaller.hpp  Camera.cpp  Camera.hpp  CameraManager.cpp  CameraManager.hpp  ComputerVisionManager.cpp  ComputerVisionManager.hpp
SettingsModule/: SettingsManager.cpp  SettingsManager.hpp
Utils/: DefaultCache.hpp  FileUtil.cpp  FileUtil.hpp
